# uf-max7456

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: CI.yml
examples/: simple.rs
examples/tbs-lucid-h7/: Cargo.toml  Embed.toml  Makefile  justfile  rust-toolchain.toml
examples/tbs-lucid-h7/.cargo/: config.toml
examples/tbs-lucid-h7/src/: main.rs
src/: bus.rs  config.rs  error.rs  lib.rs  registers.rs
