[package]
name = "uf-max7456"
version = "0.1.0"
edition = "2024"

readme = "README.md"
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/src/**",
  "/tests/**",
  "/examples/**/*.rs",
]

keywords = ["embedded-hal-driver"]
categories = [
  "embedded",
  "no-std",
  "aerospace::drones",
  "aerospace::unmanned-aerial-vehicles",
]

license = "Apache-2.0"
homepage = "https://github.com/jettify/uf-dps3xx"
repository = "https://github.com/jettify/uf-dps3xx"


[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "1.0.1", optional = true }

[features]
"defmt" = ["dep:defmt"]

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "deny"
todo = "warn"
exit = "deny"
try_err = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
infinite_loop = "warn"
map_err_ignore = "deny"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
undocumented_unsafe_blocks = "deny"
string_slice = "warn"
unneeded_field_pattern = "warn"
missing_assert_message = "warn"
redundant_type_annotations = "warn"
indexing_slicing = "deny"
let_underscore_must_use = "deny"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = [
  "eh1",
  "embedded-hal-async",
], default-features = false }
